--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/bankloans
+MONGO_URI=mongodb+srv://vivaswanth9:QpDPSJH1d5tC73Kt@cluster0.cwcerlo.mongodb.net/
